Fix gap issue in indicator during drag and drop inside groups

--- a/data/partials/layer.css
+++ b/data/partials/layer.css
@@ -84,7 +84,7 @@
 }
 
 /* drag and drop */
-.layer.highlight {
+.layer.highlight > grid > grid {
     box-shadow: inset 0 0 0 2px @primary;
 }
 
